# laneya

./: .dockerignore  .env  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml
.github/workflows/: docker-publish.yml  forgejo-docker-publish.yml  security-scan.yml
docker/: Dockerfile  docker-compose.yml
migrations/2026-03-26-181046-0000_create_channels/: up.sql
migrations/2026-03-26-194508-0000_create_videos/: up.sql
migrations/2026-03-27-123752-0000_0001_unique_channel_id/: down.sql  up.sql
src/: app_state.rs  config.rs  db.rs  lib.rs  macros.rs  main.rs  router.rs  scheduler.rs  schema.rs  templates.rs  tracer.rs  web_server.rs
src/handlers/: channel_api_handler.rs  channel_handler.rs  channel_page_handler.rs  error_handler.rs  feed_handler.rs  index_handler.rs  video_handler.rs  ws_handler.rs
src/models/: channel.rs  video.rs
src/repositories/: channel_repository.rs  video_repository.rs
src/services/: csv_import_service.rs  feed_reader_service.rs  ws_service.rs
templates/: package.json  pnpm-lock.yaml
templates/components/: channel_edit_row.html  nav.html  refresh_button.html  video_card.html  video_grid.html
templates/components/channel/: add_form.html  bulk_import_form.html  edit_row.html  row.html  table.html
templates/layouts/: base.html
templates/pages/: channel_row.html  channels.html  index.html  video_grid.html
templates/styles/: tailwind.css
