[package]
name = "laneya"
description = "Self-hosted Youtube subscription follower and notification system"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#
# API
#
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
listenfd = "1.0.2"
reqwest = { version = "0.13" }
quick-xml = { version = "0.39", features = ["serialize"] }

#
# Database
#
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }

#
# HTMX and Templating
#
askama = "0.15"
chrono = "0.4.42"
anyhow = "1.0.102"

